--- a/package.json
+++ b/package.json
@@ -1,64 +1,106 @@
 {
-  "name": "@Eri-Design/starter-theme",
-  "version": "1.0.0",
-  "description": "Eri Design Starter Theme",
-  "main": "index.js",
-  "dependencies": {
-    "lozad": "^1.9.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "autoprefixer": "^9.5.1",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "cross-env": "^6.0.3",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.6.0",
-    "postcss-assets": "^5.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.1",
-    "postcss-nested": "^4.1.2",
-    "precss": "^4.0.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.6.0",
-    "stylelint-config-wordpress": "^13.1.0",
-    "stylelint-declaration-use-variable": "^1.7.0",
-    "stylelint-order": "^1.0.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1",
-    "webpack-fix-style-only-entries": "^0.2.1",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "scripts": {
-    "test": "test",
-    "lint": "npm run lint-css && npm run lint-js && npm run lint-php",
-    "lint:fix": "eslint --fix",
-    "dev": "webpack --watch --mode development",
-    "watch": "wepback --watch --mode development",
-    "prod": "webpack --mode production",
-    "build": "webpack --mode production",
-    "start": "composer install --ignore-platform-reqs && npm install && npm run build",
-    "build-release": "npm install && composer install --no-dev -o && npm run build",
-    "lint-release": "npm install && composer install && npm run lint",
-    "lint-css": "stylelint assets/css",
-    "lint-js": "eslint assets/js",
-    "lint-php": "composer run lint",
-    "format-js": "eslint --fix assets/js",
-    "format": "npm run format-js"
-  },
-  "author": "Eri Design Studio",
-  "license": "MIT",
-  "bin": {
-    "eslint": "./node_moduels/.bin/eslint",
-    "webpack": "./node_modules/.bin/webpack"
-  }
+	"name": "@Eri-Design/starter-theme",
+	"version": "1.0.0",
+	"description": "Eri Design Starter Theme",
+	"main": "index.js",
+	"scripts": {
+		"start": "composer install --ignore-platform-reqs && npm install && npm run build",
+		"build": "NODE_ENV=production webpack --config config/webpack.prod.js",
+		"dev": "NODE_ENV=development webpack --config config/webpack.dev.js",
+		"watch": "NODE_ENV=development webpack --watch --config config/webpack.dev.js",
+		"build-release": "npm install && composer install --no-dev -o && npm run build",
+		"lint-release": "npm install && composer install && npm run lint",
+		"lint-css": "stylelint assets/css",
+		"lint-js": "eslint assets/js",
+		"lint-php": "composer run lint",
+		"format-js": "eslint --fix assets/js",
+		"lint": "npm run lint-css && npm run lint-js && npm run lint-php",
+		"format": "npm run format-js",
+		"test:a11y": "node tests/accessibility/compliance/pa11y.js"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.css": [
+			"stylelint"
+		],
+		"*.js": [
+			"eslint"
+		],
+		"*.php": [
+			"./vendor/bin/phpcs --extensions=php --warning-severity=8 -s"
+		]
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"@10up/eslint-config": "^1.0.9",
+		"@10up/stylelint-config": "^1.0.9",
+		"@babel/core": "^7.7.7",
+		"@babel/preset-env": "^7.7.7",
+		"@babel/preset-react": "^7.7.4",
+		"@babel/register": "^7.7.7",
+		"@wordpress/babel-preset-default": "^4.8.0",
+		"@wordpress/element": "^2.10.0",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "^8.0.6",
+		"backstopjs": "^4.4",
+		"browser-sync": "^2.26.7",
+		"browser-sync-webpack-plugin": "^2.2.2",
+		"browserslist": "^4.8.2",
+		"caniuse-db": "^1.0.30001016",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^5.1.1",
+		"core-js": "^3.6.0",
+		"css-loader": "^3.4.0",
+		"cssnano": "^4.1.10",
+		"eslint": "^6.8.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-react": "^7.17.0",
+		"husky": "^3.1.0",
+		"lint-staged": "^9.5.0",
+		"mini-css-extract-plugin": "^0.9.0",
+		"pa11y": "^5.3.0",
+		"postcss-editor-styles": "^0.3.0",
+		"postcss-import": "^12.0.1",
+		"imagemin-webpack-plugin": "^2.4.2",
+		"postcss-loader": "^3.0.0",
+		"postcss-preset-env": "^6.7.0",
+		"stylelint": "^9.10.1",
+		"stylelint-config-wordpress": "^14.0.0",
+		"stylelint-declaration-use-variable": "^1.7.2",
+		"stylelint-order": "^2.2.1",
+		"stylelint-webpack-plugin": "^1.1.2",
+		"terser": "^4.4.3",
+		"webpack": "^4.41.4",
+		"webpack-cli": "^3.3.10",
+		"webpack-fix-style-only-entries": "^0.4.0",
+		"webpack-merge": "^4.2.2",
+		"webpackbar": "^4.0.0"
+	},
+	"testing": {
+		"urls": {
+			"homepage": "http://local.eri-scaffold.test",
+			"article": "http://local.eri-scaffold.test/hello-world",
+			"search-results": "http://local.eri-scaffold.test/?s=hello",
+			"local": "http://local.eri-scaffold.test"
+		},
+		"accessibility": {
+			"compliance": "WCAG2AA"
+		}
+	},
+	"engines": {
+		"node": ">=8.11"
+	},
+	"dependencies": {
+		"normalize.css": "^8.0.1"
+	},
+	"author": "Eri Design Studio",
+	"license": "MIT",
+	"bin": {
+		"eslint": "./node_moduels/.bin/eslint",
+		"webpack": "./node_modules/.bin/webpack"
+	}
 }
