--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "composer install --ignore-platform-reqs && npm install && npm run build",
-		"build": "NODE_ENV=production webpack --config config/webpack.prod.js",
-		"dev": "NODE_ENV=development webpack --config config/webpack.dev.js",
-		"watch": "NODE_ENV=development webpack --watch --config config/webpack.dev.js",
+		"build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+		"dev": "cross-env NODE_ENV=development webpack --config config/webpack.dev.js",
+		"watch": "cross-env NODE_ENV=development webpack --watch --config config/webpack.dev.js",
 		"build-release": "npm install && composer install --no-dev -o && npm run build",
 		"lint-release": "npm install && composer install && npm run lint",
 		"lint-css": "stylelint assets/css",
@@ -54,18 +54,19 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"core-js": "^3.6.0",
+		"cross-env": "^6.0.3",
 		"css-loader": "^3.4.0",
 		"cssnano": "^4.1.10",
 		"eslint": "^6.8.0",
 		"eslint-loader": "^3.0.3",
 		"eslint-plugin-react": "^7.17.0",
 		"husky": "^3.1.0",
+		"imagemin-webpack-plugin": "^2.4.2",
 		"lint-staged": "^9.5.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"pa11y": "^5.3.0",
 		"postcss-editor-styles": "^0.3.0",
 		"postcss-import": "^12.0.1",
-		"imagemin-webpack-plugin": "^2.4.2",
 		"postcss-loader": "^3.0.0",
 		"postcss-preset-env": "^6.7.0",
 		"stylelint": "^9.10.1",
@@ -98,7 +99,6 @@
 		"normalize.css": "^8.0.1"
 	},
 	"author": "Eri Design Studio",
-	"license": "MIT",
 	"bin": {
 		"eslint": "./node_moduels/.bin/eslint",
 		"webpack": "./node_modules/.bin/webpack"
