--- a/package.json
+++ b/package.json
@@ -65,10 +65,16 @@
 		"lint-staged": "^9.5.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"pa11y": "^5.3.0",
+		"postcss-custom-media": "^7.0.8",
 		"postcss-editor-styles": "^0.3.0",
 		"postcss-import": "^12.0.1",
 		"postcss-loader": "^3.0.0",
+		"postcss-mixins": "^6.2.3",
+		"postcss-nested": "^4.2.1",
 		"postcss-preset-env": "^6.7.0",
+		"precss": "^4.0.0",
+		"prettier-eslint": "^9.0.1",
+		"prettier-stylelint": "^0.4.2",
 		"stylelint": "^9.10.1",
 		"stylelint-config-wordpress": "^14.0.0",
 		"stylelint-declaration-use-variable": "^1.7.2",
