--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "@10up/stylelint-config"
+  "extends": "@10up/stylelint-config",
+  "rules": {
+    "string-quotes": "single",
+    "at-rule-empty-line-before": null,
+    "rule-empty-line-before": null
+  }
 }
