--- a/package.json
+++ b/package.json
@@ -36,51 +36,49 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"@10up/eslint-config": "^1.0.9",
-		"@babel/core": "^7.7.7",
-		"@babel/preset-env": "^7.7.7",
-		"@babel/preset-react": "^7.7.4",
-		"@babel/register": "^7.7.7",
-		"@wordpress/babel-preset-default": "^4.8.0",
-		"@wordpress/element": "^2.10.0",
+		"@babel/core": "^7.18.6",
+		"@babel/preset-env": "^7.18.6",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/register": "^7.18.6",
+		"@wordpress/babel-preset-default": "^6.13.0",
+		"@wordpress/element": "^4.9.0",
+		"@wordpress/eslint-plugin": "^12.5.0",
 		"babel-eslint": "^10.0.3",
-		"babel-loader": "^8.0.6",
-		"backstopjs": "^4.4",
-		"browser-sync": "^2.26.7",
-		"browser-sync-webpack-plugin": "^2.2.2",
-		"browserslist": "^4.8.2",
-		"caniuse-db": "^1.0.30001016",
-		"clean-webpack-plugin": "^3.0.0",
-		"copy-webpack-plugin": "^5.1.1",
-		"cross-env": "^6.0.3",
-		"css-loader": "^3.4.0",
-		"cssnano": "^4.1.10",
-		"eslint": "^6.8.0",
-		"eslint-loader": "^3.0.3",
-		"eslint-plugin-react": "^7.17.0",
-		"lint-staged": "^9.5.0",
-		"mini-css-extract-plugin": "^0.9.0",
-		"postcss-custom-media": "^7.0.8",
+		"babel-loader": "^8.2.5",
+		"browser-sync": "^2.27.10",
+		"browser-sync-webpack-plugin": "^2.3.0",
+		"browserslist": "^4.21.1",
+		"caniuse-db": "^1.0.30001359",
+		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.7.1",
+		"cssnano": "^5.1.12",
+		"eslint": "^8.18.0",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-webpack-plugin": "^3.2.0",
+		"lint-staged": "^13.0.3",
+		"mini-css-extract-plugin": "^2.6.1",
+		"postcss-custom-media": "^8.0.2",
 		"postcss-editor-styles": "^0.3.0",
-		"postcss-import": "^12.0.1",
-		"postcss-loader": "^3.0.0",
-		"postcss-mixins": "^6.2.3",
-		"postcss-nested": "^4.2.1",
-		"postcss-preset-env": "^6.7.0",
-		"precss": "^4.0.0",
-		"prettier-eslint": "^9.0.1",
+		"postcss-import": "^14.1.0",
+		"postcss-loader": "^7.0.0",
+		"postcss-mixins": "^9.0.3",
+		"postcss-nested": "^5.0.6",
+		"postcss-preset-env": "^7.7.2",
+		"prettier": "^2.7.1",
+		"prettier-eslint": "^15.0.1",
 		"prettier-stylelint": "^0.4.2",
-		"stylelint": "^14.1.0",
-		"stylelint-config-recommended": "^6.0.0",
-		"stylelint-declaration-use-variable": "^1.7.2",
-		"stylelint-order": "^2.2.1",
-		"stylelint-webpack-plugin": "^1.1.2",
-		"terser": "^4.4.3",
-		"webpack": "^4.41.4",
-		"webpack-cli": "^3.3.10",
-		"webpack-fix-style-only-entries": "^0.4.0",
-		"webpack-merge": "^4.2.2",
-		"webpackbar": "^4.0.0"
+		"stylelint": "^14.9.1",
+		"stylelint-config-recommended": "^8.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-webpack-plugin": "^3.3.0",
+		"terser": "^5.14.1",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-fix-style-only-entries": "^0.6.1",
+		"webpack-merge": "^5.8.0",
+		"webpackbar": "^5.0.2"
 	},
 	"testing": {
 		"urls": {
